[gd_scene load_steps=9 format=3 uid="uid://recuq48h84x4"]

[ext_resource type="AudioStream" uid="uid://bwt0423k0kgoc" path="res://audio/sfx/place_mine.ogg" id="1_kqr42"]
[ext_resource type="Script" uid="uid://c5e7erb3orwaa" path="res://scripts/mine.gd" id="1_m55k0"]
[ext_resource type="Texture2D" uid="uid://dwch5634isw8s" path="res://sprites/mine_highlight.png" id="2_j4qwv"]
[ext_resource type="Texture2D" uid="uid://doy0nubslpmt5" path="res://sprites/mine_area.png" id="3_j4qwv"]
[ext_resource type="AudioStream" uid="uid://cuihtf7dwo2om" path="res://audio/sfx/explode.ogg" id="5_361d0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yym1a"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kqr42"]
radius = 32.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m55k0"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("1_kqr42")

[node name="Mine" type="Node2D"]
script = ExtResource("1_m55k0")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = ExtResource("3_j4qwv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_j4qwv")

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_yym1a")

[node name="Explode" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explode"]
shape = SubResource("CircleShape2D_kqr42")

[node name="Beep" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_m55k0")
autoplay = true
bus = &"SFX"

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_361d0")
volume_db = 2.0
bus = &"SFX"

[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_detect_body_exited"]
[connection signal="body_entered" from="Explode" to="." method="_on_explode_body_entered"]
[connection signal="body_exited" from="Explode" to="." method="_on_explode_body_exited"]
